; ModuleID = '/home/carl/AnghaBench/toxcore/auto_tests/extr_..toxcoreDHT.c_DHT_bootstrap_from_address.c'
source_filename = "/home/carl/AnghaBench/toxcore/auto_tests/extr_..toxcoreDHT.c_DHT_bootstrap_from_address.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i8*, %struct.TYPE_10__ }
%struct.TYPE_10__ = type { i32 }

@AF_UNSPEC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @DHT_bootstrap_from_address(i32* %0, i8* %1, i32 %2, i8* %3, i32* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca %struct.TYPE_9__, align 8
  %13 = alloca %struct.TYPE_10__*, align 8
  %14 = alloca %struct.TYPE_9__, align 8
  store i32* %0, i32** %7, align 8
  store i8* %1, i8** %8, align 8
  store i32 %2, i32* %9, align 4
  store i8* %3, i8** %10, align 8
  store i32* %4, i32** %11, align 8
  store %struct.TYPE_10__* null, %struct.TYPE_10__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %12, i32 0, i32 1
  %16 = load i32, i32* %9, align 4
  %17 = call i32 @ip_init(%struct.TYPE_10__* %15, i32 %16)
  %18 = load i32, i32* %9, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %27

20:                                               ; preds = %5
  %21 = load i32, i32* @AF_UNSPEC, align 4
  %22 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %12, i32 0, i32 1
  %23 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %22, i32 0, i32 0
  store i32 %21, i32* %23, align 8
  %24 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %14, i32 0, i32 1
  %25 = call i32 @ip_reset(%struct.TYPE_10__* %24)
  %26 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %14, i32 0, i32 1
  store %struct.TYPE_10__* %26, %struct.TYPE_10__** %13, align 8
  br label %27

27:                                               ; preds = %20, %5
  %28 = load i8*, i8** %8, align 8
  %29 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %12, i32 0, i32 1
  %30 = load %struct.TYPE_10__*, %struct.TYPE_10__** %13, align 8
  %31 = call i64 @addr_resolve_or_parse_ip(i8* %28, %struct.TYPE_10__* %29, %struct.TYPE_10__* %30)
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %62

33:                                               ; preds = %27
  %34 = load i8*, i8** %10, align 8
  %35 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %12, i32 0, i32 0
  store i8* %34, i8** %35, align 8
  %36 = load i32*, i32** %7, align 8
  %37 = load i32*, i32** %11, align 8
  %38 = bitcast %struct.TYPE_9__* %12 to { i8*, i32 }*
  %39 = getelementptr inbounds { i8*, i32 }, { i8*, i32 }* %38, i32 0, i32 0
  %40 = load i8*, i8** %39, align 8
  %41 = getelementptr inbounds { i8*, i32 }, { i8*, i32 }* %38, i32 0, i32 1
  %42 = load i32, i32* %41, align 8
  %43 = call i32 @DHT_bootstrap(i32* %36, i8* %40, i32 %42, i32* %37)
  %44 = load %struct.TYPE_10__*, %struct.TYPE_10__** %13, align 8
  %45 = icmp ne %struct.TYPE_10__* %44, null
  br i1 %45, label %46, label %61

46:                                               ; preds = %33
  %47 = load %struct.TYPE_10__*, %struct.TYPE_10__** %13, align 8
  %48 = call i64 @ip_isset(%struct.TYPE_10__* %47)
  %49 = icmp ne i64 %48, 0
  br i1 %49, label %50, label %61

50:                                               ; preds = %46
  %51 = load i8*, i8** %10, align 8
  %52 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %14, i32 0, i32 0
  store i8* %51, i8** %52, align 8
  %53 = load i32*, i32** %7, align 8
  %54 = load i32*, i32** %11, align 8
  %55 = bitcast %struct.TYPE_9__* %14 to { i8*, i32 }*
  %56 = getelementptr inbounds { i8*, i32 }, { i8*, i32 }* %55, i32 0, i32 0
  %57 = load i8*, i8** %56, align 8
  %58 = getelementptr inbounds { i8*, i32 }, { i8*, i32 }* %55, i32 0, i32 1
  %59 = load i32, i32* %58, align 8
  %60 = call i32 @DHT_bootstrap(i32* %53, i8* %57, i32 %59, i32* %54)
  br label %61

61:                                               ; preds = %50, %46, %33
  store i32 1, i32* %6, align 4
  br label %63

62:                                               ; preds = %27
  store i32 0, i32* %6, align 4
  br label %63

63:                                               ; preds = %62, %61
  %64 = load i32, i32* %6, align 4
  ret i32 %64
}

declare dso_local i32 @ip_init(%struct.TYPE_10__*, i32) #1

declare dso_local i32 @ip_reset(%struct.TYPE_10__*) #1

declare dso_local i64 @addr_resolve_or_parse_ip(i8*, %struct.TYPE_10__*, %struct.TYPE_10__*) #1

declare dso_local i32 @DHT_bootstrap(i32*, i8*, i32, i32*) #1

declare dso_local i64 @ip_isset(%struct.TYPE_10__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
